<resources>
    <string name="app_name">Guess Number</string>
    <string name="button_start">Start</string>
    <string name="button_about_game">About game</string>
    <string name="button_exit">Exit</string>
    <string name="button_start_game">Start game</string>
    <string name="button_back">Back</string>
    <string name="button_check">Check</string>
    <string name="button_give_up">Give up</string>
    <string name="button_github">GitHub</string>
    <string name="button_main_menu">Main Menu</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="title_select_parameters">Selection of parameters</string>
    <string name="title_about_game">About game</string>
    <string name="label_hidden_number_interval">Hidden number interval</string>
    <string name="label_number_of_attempts">Number of attempts</string>
    <string name="label_from">From</string>
    <string name="label_before">Before</string>
    <string name="label_number">Number</string>
    <string name="label_guess_the_number">Guess the number from 0 to 1</string>
    <string name="label_attempts_left">Attempts left: 10</string>
    <string name="label_version">Version: 1.0</string>
    <string name="label_data_version">Version release date: 31.12.2023</string>
    <string name="label_developer">Developer: itSlash</string>
    <string name="icon_guess_the_number">Logo guess the number</string>
    <string name="dialog_equal_numbers">The values "From" and "Before" should not be equal.</string>
    <string name="dialog_empty_value_numbers_of_attempts">The value "Numbers of attempts" cannot be empty.</string>
    <string name="dialog_empty_value_from">The value "From" cannot be empty.</string>
    <string name="dialog_empty_value_before">The value "Before" cannot be empty.</string>
    <string name="dialog_hidden_number_more">The hidden number is greater.</string>
    <string name="dialog_hidden_number_less">The hidden number is less.</string>
    <string name="dialog_game_win">Game win</string>
    <string name="dialog_game_lose">Game lose</string>
    <string name="dialog_number_guess">The number is guessed!</string>
    <string name="dialog_number_not_guess">The number is not guessed!</string>
    <string name="dialog_give_up">Give up</string>
    <string name="dialog_give_up_question">Do you really want to give up?</string>
</resources>