<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_version"
        style="@style/textViewItem"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:text="@string/label_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_data_version"
        style="@style/textViewItem"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_data_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_version" />

    <TextView
        android:id="@+id/textView_developer"
        style="@style/textViewItem"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_developer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_data_version" />

    <Button
        android:id="@+id/button_github"
        style="@style/styleButtonOne"
        android:layout_width="192dp"
        android:layout_height="60dp"
        android:text="@string/button_github"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_developer" />

    <Button
        android:id="@+id/button_back"
        style="@style/styleButtonTwo"
        android:layout_width="192dp"
        android:layout_height="60dp"
        android:text="@string/button_back"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_github" />

</androidx.constraintlayout.widget.ConstraintLayout>