<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/button_start"
        style="@style/styleButtonOne"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"/>

    <Button
        android:id="@+id/button_about_game"
        style="@style/styleButtonTwo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="13dp"
        android:text="@string/button_about_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start"
        app:layout_constraintWidth_percent="0.5"/>

    <Button
        android:id="@+id/button_exit"
        style="@style/styleButtonTwo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="13dp"
        android:text="@string/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_about_game"
        app:layout_constraintWidth_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>